<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <AutoCompleteTextView
        android:id="@+id/etExerciseName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_exercise_name" />

    <EditText
        android:id="@+id/etWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_weight"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/etRepetitions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_repetitions"
        android:inputType="number" />

    <EditText
        android:id="@+id/etSeries"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_series"
        android:inputType="number" />

</LinearLayout>
