<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.AddExerciseActivity">

    <TextView
        android:id="@+id/tvAddExerciseTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_add_exercise"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"/>

    <AutoCompleteTextView
        android:id="@+id/etExerciseName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_exercise_name"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/tvAddExerciseTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etWeight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_weight"
        android:inputType="numberDecimal"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/etExerciseName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etRepetitions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_repetitions"
        android:inputType="number"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/etWeight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etSeries"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_series"
        android:inputType="number"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/etRepetitions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnAddExercise"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_add"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/etSeries"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnFinish"
        android:layout_marginEnd="8dp"/>

    <Button
        android:id="@+id/btnFinish"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_finish"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/etSeries"
        app:layout_constraintStart_toEndOf="@id/btnAddExercise"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
