<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="8dp">

    <ImageView
        android:id="@+id/rv_iv_icon"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:scaleType="centerCrop"
        android:src="@drawable/bulgara"
        android:contentDescription="@string/rv_imageDesc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/rv_tv_title"
        android:text="@string/rv_title"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toEndOf="@id/rv_iv_icon"
        app:layout_constraintTop_toTopOf="@+id/rv_iv_icon"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="12dp"/>

    <TextView
        android:id="@+id/rv_tv_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/rv_desc"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="@id/rv_tv_title"
        app:layout_constraintStart_toStartOf="@id/rv_tv_title"
        app:layout_constraintTop_toBottomOf="@id/rv_tv_title" />
</androidx.constraintlayout.widget.ConstraintLayout>