<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/login">

    <TextView
        android:id="@+id/tv_login_title"
        android:layout_width="260dp"
        android:layout_height="41dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="54dp"
        android:text="Login!"
        android:textAlignment="center"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="60dp"
        android:ems="10"
        android:hint="@string/et_password_hint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_login_username" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="289dp"
        android:layout_height="54dp"
        android:layout_marginTop="172dp"
        android:layout_marginEnd="60dp"
        android:text="@string/btn_login_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_login_password" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="289dp"
        android:layout_height="54dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="60dp"
        android:text="@string/btn_register_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <EditText
        android:id="@+id/et_login_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="60dp"
        android:ems="10"
        android:hint="@string/et_username_hint"
        android:inputType="text"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_title" />

    <TextView
        android:id="@+id/tv_username_label"
        android:layout_width="110dp"
        android:layout_height="34dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="12dp"
        android:text="@string/et_username_hint"
        android:textAlignment="textStart"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/et_login_username"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_title" />

    <TextView
        android:id="@+id/tv_password_label"
        android:layout_width="110dp"
        android:layout_height="34dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="12dp"
        android:text="@string/et_password_hint"
        android:textAlignment="textStart"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/et_login_password"
        app:layout_constraintTop_toBottomOf="@+id/tv_username_label" />

</androidx.constraintlayout.widget.ConstraintLayout>